<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="60dp"
        app:flow_firstVerticalBias="1.0"
        app:flow_verticalBias="0.514"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_text_description_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:ems="10"
                android:hint="@string/description_game"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_creator_game" />

            <EditText
                android:id="@+id/edit_text_year_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:ems="10"
                android:hint="@string/release_date"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_description_game" />

            <EditText
                android:id="@+id/edit_text_game_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:ems="10"
                android:hint="@string/name_game"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <EditText
                android:id="@+id/edit_text_creator_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:ems="10"
                android:hint="@string/creator_game"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_game_name" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="36dp"
                android:drawableStart="@drawable/ic_lock"
                android:text="@string/data_game"
                android:textColor="@color/blue_games"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView16" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/status_game"
                android:textColor="@color/blue_games"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.114"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_year_game" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView16"
                app:layout_constraintEnd_toEndOf="@+id/imageView16"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imageView16"
                app:layout_constraintTop_toTopOf="@+id/imageView16"
                app:layout_constraintVertical_bias="0.571"
                app:srcCompat="@drawable/ic_more" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21"
                app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="44dp"
                android:drawableStart="@drawable/ic_lock"
                android:text="@string/img_game"
                android:textColor="@color/blue_games"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radion_button_status_game1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/gray"
                android:text="@string/status_option1"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <RadioButton
                android:id="@+id/radion_button_status_game2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="56dp"
                android:buttonTint="@color/gray"
                android:text="@string/status_option2"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.917"
                app:layout_constraintStart_toEndOf="@+id/radion_button_status_game1"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="0dp"
        android:layout_height="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave__5_" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:background="@drawable/wave__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.194" />

</androidx.constraintlayout.widget.ConstraintLayout>